--- a/gogem/android/app/src/main/AndroidManifest.xml
+++ b/gogem/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:label="gogem"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAoHTt15Mlynl6p7zea65vCHp42yIBkYcg" />
+        <activity
+            android:name="com.yandex.runtime.RuntimeEnvironmentActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
