--- a/gogem/ios/Runner/Info.plist
+++ b/gogem/ios/Runner/Info.plist
@@ -45,5 +45,11 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>http</string>
+        <string>https</string>
+        <string>comgooglemaps</string>
+    </array>
 </dict>
 </plist>
