--- a/gogem/pubspec.yaml
+++ b/gogem/pubspec.yaml
@@ -23,6 +23,11 @@ dependencies:
   google_maps_flutter: ^2.6.1
   flutter_dotenv: ^5.1.0
   url_launcher: ^6.3.0
+  google_generative_ai: ^0.4.7
+  build_runner: ^2.9.0
+  mime: ^2.0.0
+  envied: ^1.3.1
+  envied_generator: ^1.3.1
 
 dev_dependencies:
   flutter_test:
@@ -44,7 +49,7 @@ flutter:
     - assets/data/
     - assets/logo/
     - assets/lottie/
-    - .env
+    #- .env
 
   uses-material-design: true
 
