--- a/gogem/pubspec.yaml
+++ b/gogem/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   mime: ^2.0.0
   envied: ^1.3.1
   envied_generator: ^1.3.1
+  app_settings: ^6.1.1
 
 dev_dependencies:
   flutter_test:
