--- a/gogem/pubspec.yaml
+++ b/gogem/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   mime: ^2.0.0
   envied: ^1.3.1
   envied_generator: ^1.3.1
+  app_settings: ^6.1.1
+  sqflite: ^2.4.2
+  shared_preferences: ^2.5.3
+  path: ^1.9.1
+  path_provider: ^2.1.5
 
   tflite_flutter: ^0.11.0
 
